--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -3,13 +3,15 @@
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #e88b0a;
+    background-color: #FAC921;
 }
+
+
 
 main h1{
     text-align: center;
-    color: #162A5F;
-    font-family: Inter;
+    color: #2d2d32;
+    font-family:'Signika';
     font-size: 50px;
     font-style: normal;
     font-weight: 600;
@@ -17,8 +19,8 @@ main h1{
 }
 
 h1 span{
-    color: #FFB233;
-    font-family: Inter;
+    color: #FAC921;
+    font-family: 'Signika';
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -29,24 +31,12 @@ body header div img{
 }
 
 body header{
-    background: #FFF;
+    background: #2d2d32;
     box-shadow: 0px 4px 4px 0px rgb(243, 209, 161);
 }
 
-/*main section{*/
-/*    width: 39%;*/
-/*    height: 80vh;*/
-/*    flex-shrink: 0;*/
-/*    border-radius: 10px;*/
-/*    background: #FFF;*/
-/*    box-shadow: 0px 4px 30px 2px #B8B8B8;*/
-/*    margin-left: 120px;*/
-/*    margin-top: 15vh;*/
-/*    margin-bottom: 10vh;*/
-/*}*/
-
 main section:hover{
-    box-shadow: 0 4px 30px 2px #68645f;
+    box-shadow: 0 4px 30px 2px #fac921;
 }
 
 main section div:nth-child(2){
@@ -56,9 +46,9 @@ main section div:nth-child(2){
 }
 
 main section div:nth-child(2) h4{
-    color: #FD6E0A;
+    color: #FAC921;
     text-align: center;
-    font-family: Inter;
+    font-family:'Signika';
     font-size: 1.7vw;
     font-style: normal;
     font-weight: 1000;
@@ -67,7 +57,7 @@ main section div:nth-child(2) h4{
 }
 
 main section div:nth-child(2) p:nth-child(2){
-    color: #747272;
+    color: #000000;
     text-align: center;
     font-family: Inter;
     font-size: 16px;
@@ -80,7 +70,7 @@ main section div:nth-child(2) p:nth-child(2){
 
 
 main section div:nth-child(2) a{
-    color: #162A5F;
+    color: #2d2d32;
     font-family: Inter;
     font-size: 16px;
     font-style: normal;
@@ -90,7 +80,7 @@ main section div:nth-child(2) a{
 }
 
 main section aside:nth-child(1)>h3{
-    color: #073e7f;
+    color: #2d2d32;
     font-family: Inter;
     font-size: 20px;
     margin-left: 15vw;
@@ -109,7 +99,7 @@ main section>aside>img{
     width: 30vw;
     top: 13vh;
     left: 4vw;
-    box-shadow: 0px 5px 30px 5px rgb(113, 103, 103);
+    box-shadow: 0px 5px 30px 5px rgb(158, 158, 158);
     border-radius: 10px;
 }
 
@@ -119,7 +109,7 @@ section:nth-child(1){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 120px;
     margin-top: 15vh;
     margin-bottom: 10vh;
@@ -131,7 +121,7 @@ section:nth-child(2){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 120px;
     margin-top: 15vh;
     margin-bottom: 10vh;
@@ -143,7 +133,7 @@ section:nth-child(3){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -90vh;
     margin-bottom: 7vh;
@@ -155,7 +145,7 @@ section:nth-child(4){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 120px;
     margin-top: 15vh;
     margin-bottom: 10vh;
@@ -167,7 +157,7 @@ section:nth-child(5){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -90vh;
     margin-bottom: 7vh;
@@ -180,7 +170,7 @@ section:nth-child(6){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 120px;
     margin-top: 15vh;
     margin-bottom: 10vh;
@@ -192,7 +182,7 @@ section:nth-child(7){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -90vh;
     margin-bottom: 7vh;
@@ -216,7 +206,7 @@ section:nth-child(9){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 8vw;
     margin-top: 10vh;
     margin-bottom: 7vh;
@@ -228,7 +218,7 @@ section:nth-child(10){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -87vh;
     margin-bottom: 9vh;
@@ -240,7 +230,7 @@ section:nth-child(11){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 8vw;
     margin-top: 10vh;
     margin-bottom: 7vh;
@@ -252,7 +242,7 @@ section:nth-child(12){
     flex-shrink: 0;
     border-radius: 10px;
     background: #FFF;
-    box-shadow: 0px 4px 30px 2px #B8B8B8;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
     margin-left: 53vw;
     margin-top: -87vh;
     margin-bottom: 9vh;
