--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -239,3 +239,28 @@ section:nth-child(12){
     margin-top: -87vh;
     margin-bottom: 9vh;
 }
+
+section:nth-child(14){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 8vw;
+    margin-top: 10vh;
+    margin-bottom: 7vh;
+}
+
+section:nth-child(15){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 53vw;
+    margin-top: -87vh;
+    margin-bottom: 9vh;
+}
+
