--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -645,7 +645,7 @@ section:nth-child(4)>div>h4{
     margin: auto;
 }
 
-/*!*--------------------------------------Languages section-------------------------------------------------*!*/
+/*--------------------------------------Languages section-------------------------------------------------*/
 
 section:nth-child(5){
     position: relative;
@@ -737,7 +737,7 @@ section:nth-child(5)>img:hover{
     left: 0vw;
 }
 
-/*!*--------------------------------------Project section-------------------------------------------------*!*/
+/*/*--------------------------------------Project section-------------------------------------------------*/
 section:nth-child(6){
     position: relative;
     height: 100vh;
