--- a/assets/css/Responsive425px/section4.css
+++ b/assets/css/Responsive425px/section4.css
@@ -1,180 +1,20 @@
-@media all and (max-width: 425px) {
+@media all and (max-width: 425px) and (min-width:321px){
 
     section:nth-child(4) {
         height: 70vh;
     }
 
-    /*section:nth-child(4)>div:nth-child(3) {*/
-    /*    position: relative;*/
-    /*    bottom: 143vh;*/
-    /*    left: 7vw;*/
-    /*}*/
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(1)>h1 {
-        width: 8vh;
+    section:nth-child(4)>h5 {
         font-size: 4.5vw;
-        top: 1vh;
-        left: 38vw;
+        top: 2vh;
+        left: -6vw;
     }
 
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(1)>h2 {
-        width: 22vh;
+    section:nth-child(4)>h1 {
+        width: 27vw;
         font-size: 5vw;
-        top: 4vh;
-        left: 34vw;
-    }
-
-    section:nth-child(4)>div:nth-child(2)>img {
-        position: relative;
-        top: 9vh;
-        height: 42vh;
-        width: 86vw;
-        right: 10vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(2)>h5 {
-        width: 16vh;
-        font-size: 1.8vh;
-        left: -4vw;
-        bottom: 24.5vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(2)>img {
-        left: 7vw;
-        height: 9vh;
-        width: 9vh;
-        bottom: 24vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(2)>h1 {
-        width: 32vh;
-        font-size: 2vh;
-        position: absolute;
-        bottom: 28vh;
-        left: 31vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(2)>h2 {
-        width: 27vh;
-        font-size: 1.8vh;
-        bottom: 25vh;
-        left: 37vw;
-
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(3)>h5 {
-        width: 11vh;
-        font-size: 1.8vh;
-        left: 58.5vw;
-        bottom: 46.5vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(3)>img {
-        left: 47vw;
-        height: 7vh;
-        width: 7vh;
-        bottom: 47vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(3)>h1 {
-        width: 33vh;
-        font-size: 2vh;
-        bottom: 50vh;
-        left: -5vw;
-
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(3)>h2 {
-        width: 24vh;
-        font-size: 1.8vh;
-        bottom: 47vh;
-        left: 1vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>h5 {
-        width: 16vh;
-        font-size: 1.8vh;
-        left: -4vw;
-        bottom: 90.9vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>img {
-        left: 6vw;
-        height: 9vh;
-        width: 9vh;
-        bottom: 90.5vh;
-
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>h1 {
-        width: 41vh;
-        font-size: 2vh;
-        bottom: 95vh;
-        left: 20vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>h2 {
-        width: 33vh;
-        font-size: 1.8vh;
-        bottom: 91vh;
-        left: 25vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h5 {
-        width: 10vh;
-        font-size: 1.8vh;
-        left: 58.5vw;
-        bottom: 134.9vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>img {
-        left: 46vw;
-        height: 9vh;
-        width: 9vh;
-        bottom: 134vh;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h1 {
-        width: 35vh;
-        font-size: 2vh;
-        bottom: 138vh;
-        left: -3vw;
-    }
-
-    section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h2 {
-        width: 37vh;
-        font-size: 1.8vh;
-        bottom: 135vh;
-        left: -5vw;
+        top: 5vh;
     }
 
 
-    section:nth-child(5) {
-        height: 11vh;
-    }
-
-
-    section:nth-child(5)>h5 {
-        width: 9vh;
-        font-size: 4.5vw;
-        top: -13vh;
-        left: -4vh;
-    }
-
-    section:nth-child(5)>h1 {
-        width: 27vh;
-        font-size: 5vw;
-        top: -13vh;
-        left: 1vw;
-    }
-
-    section:nth-child(5)>img {
-        width: 7%;
-        position: absolute;
-        top: 0vh;
-        margin: auto;
-    }
-
-
-
-    }
+}
