--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,8 +221,8 @@ body main section:first-child>div:nth-child(4)>aside>div:first-child>p{
 }
 
 .home-sci {
-    position: absolute;
-    bottom: 15vh;
+    position: relative;
+    bottom: -2vw;
     left: 0.5vw;
     width: 207px;
     display: flex;
@@ -234,12 +234,12 @@ body main section:first-child>div:nth-child(4)>aside>div:first-child>p{
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 55px;
-    height: 55px;
+    width: 3vw;
+    height: 3vw;
     background: transparent;
     border: 0.2rem solid #fac921;
     border-radius: 50%;
-    font-size: 28px;
+    font-size: 2vw;
     color: white;
     z-index: 1;
     overflow: hidden;
@@ -269,8 +269,278 @@ body main section:first-child>div:nth-child(4)>aside>div:first-child>p{
 }
 
 
-/*--------------------------------------About me section-------------------------------------------------*/
+/*--------------------------------------expertise section-------------------------------------------------*/
+
+
 section:nth-child(2){
+    position: relative;
+    height: 70vw;
+    width: 70vw;
+    padding-left: 14vw;
+    padding-right: 14vw;
+}
+
+section:nth-child(2)>h5{
+    width: 15vw;
+    font-family: 'Signika';
+    font-size: 2vw;
+    font-weight: 600;
+    color: #FAC921;
+    position: absolute;
+    top: 5vw;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+section:nth-child(2)>h1{
+    width: 42vw;
+    font-family: 'Catamaran';
+    font-size: 3vw;
+    font-weight: 700;
+    color: #0A0A0A;
+
+    position: absolute;
+    top: 7vw;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+section:nth-child(2)>p{
+    width: 62vw;
+    font-family: 'Signika';
+    font-size: 1.3vw;
+    font-weight: 700;
+    color: #0A0A0A;
+    position: absolute;
+    top: 10vw;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+.content-inner {
+    width:300px;
+    height:350px ;
+    color: #000000;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    backface-visibility: hidden;
+    transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.content-inner > * {
+    backface-visibility: hidden;
+    transition: .9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.content-inner:hover .content-front {
+    transform: rotateY(-180deg);
+}
+.content-inner:hover .content-back {
+    transform: rotateY(0deg);
+}
+.content-inner .content-front,
+.content-inner .content-back {
+    color: black;
+    position: relative;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    backface-visibility: hidden;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.content-front {
+    background: linear-gradient(40deg, rgb(250, 201, 33), rgb(227, 227, 227));
+    position:relative;
+    cursor:pointer;
+    border-radius: 5px 5px 5px 5px;
+}
+.content-front  .cf-inner:before {
+    top:27px;
+    left:10px;
+    border-left:1px dotted;
+    border-top:1px dotted;
+}
+.content-front .cf-inner:after {
+    bottom:27px;
+    right:10px;
+    border-right:1px  dotted;
+    border-bottom:1px dotted;
+}
+
+.content-front  .cf-inner:before , .content-front  .cf-inner:after {
+    content:'';
+    position:absolute;
+    width:50px;
+    height:50px;
+    border-color: rgb(0, 0, 0);
+    z-index:5;
+}
+
+.content-inner .content-back {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    transform: rotateY(180deg);
+    background: linear-gradient(40deg, rgb(227, 227, 227), rgb(250, 201, 33));
+    border-radius: 5px 5px 5px 5px;
+}
+
+.content-inner .cf-inner {
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+    width:100%;
+    padding:150px 30px;
+}
+.content-inner .cf-inner .inner {
+    align-items: stretch;
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    backface-visibility: hidden;
+    transform: translateZ(95px) scale(0.81);
+    text-align: center;
+    position:relative;
+    z-index:2;
+}
+
+.content-back i {
+    font-size:54px;
+    position:relative;
+}
+.dec-icon {
+    position:relative;
+    display:inline-table;
+    width:80px;
+    height:80px;
+}
+
+.dec-icon i {
+    z-index:1;
+}
+.content-back .dec-icon {
+    top:-20px;
+}
+
+.dec-icon>img{
+    width: 100%;
+}
+
+.content-inner .cf-inner .inner p {
+    font-size: 1.3vw;
+    color: #000000;
+}
+.content-back:after  {
+    color: black;
+    position:absolute;
+    content: '\25CF\25CF\25CF';
+    width:50px;
+    left:50%;
+    bottom:30px;
+    margin-left:-25px;
+    font-size: 9px;
+    letter-spacing: 4px;
+}
+.serv-num {
+    position:absolute;
+    bottom:27px;
+    left:10px;
+    color: #000000;
+    font-family: 'Playfair Display', cursive;
+    z-index:3;
+    font-size:20px;
+}
+.content-inner .cf-inner .inner h2  {
+    position:relative;
+    font-size:22px;
+    font-weight:800;
+    padding-bottom:20px;
+    font-family: 'Playfair Display', cursive;
+}
+
+.content-inner .cf-inner .inner h2:after {
+    content:'';
+    position:absolute;
+    top:-30px;
+    margin-left:-25px;
+    left:50%;
+    width:50px;
+    height:2px;
+}
+.content-inner .content-front h4{
+    display:inline-block;
+    color: #000000;
+    text-transform:uppercase;
+    font-size:12px;
+    letter-spacing:2px;
+    margin:0 4px;
+}
+
+.col-md-1{
+    position:absolute;
+    top: 17vw;
+    left: 14vw;
+}
+
+.col-md-2{
+    position: absolute;
+    top: 17vw;
+    left: 38.5vw;
+}
+
+.col-md-3{
+    position: absolute;
+    top: 17vw;
+    right: 14vw;
+}
+
+.col-md-4{
+    position:absolute;
+    top: 45vw;
+    left: 14vw;
+}
+
+.col-md-5{
+    position: absolute;
+    top: 45vw;
+    left: 38.5vw;
+}
+
+.col-md-6{
+    position: absolute;
+    top: 45vw;
+    right: 14vw;
+}
+
+section:nth-child(2)>div:nth-child(8)>img:nth-child(1){
+    position: absolute;
+    height: 28vh;
+    width: 10.5vh;
+    top: 61vh;
+    left: 22vh;
+}
+
+section:nth-child(2)>div:nth-child(8)>img:nth-child(2){
+    position: absolute;
+    height: 34vh;
+    width: 16vh;
+    top: 128vh;
+    right: 1vw;
+}
+
+
+
+
+
+/*--------------------------------------About me section-------------------------------------------------*/
+section:nth-child(3){
     position: relative;
     height: 100vh;
     width: 71vw;
@@ -286,17 +556,17 @@ section:nth-child(2){
     margin: auto;
 }
 
-section:nth-child(2)>div{
+section:nth-child(3)>div{
     height: 55vh;
     width: 35vw;
 
     position: absolute;
-    top: 12vw;
+    top: 10vw;
     right: 21vw;
     margin: auto;
 }
 
-section:nth-child(2)>div>h5{
+section:nth-child(3)>div>h5{
     width: 12vw;
     font-family: 'Signika';
     font-size: 2vw;
@@ -305,7 +575,7 @@ section:nth-child(2)>div>h5{
     margin: 0;
 }
 
-section:nth-child(2)>div>h1{
+section:nth-child(3)>div>h1{
     width: 25vw;
     font-family: 'Catamaran';
     font-size: 3vw;
@@ -317,7 +587,7 @@ section:nth-child(2)>div>h1{
     margin: auto;
 }
 
-section:nth-child(2)>div>h3{
+section:nth-child(3)>div>h3{
     width: 34vw;
     font-family: 'Work Sans';
     font-size: 1.2vw;
@@ -329,7 +599,7 @@ section:nth-child(2)>div>h3{
     margin: auto;
 }
 
-section:nth-child(2)>div>img:first-child{
+section:nth-child(3)>div>img:first-child{
     width: 17vw;
     position: absolute;
     top: 43vh;
@@ -337,7 +607,7 @@ section:nth-child(2)>div>img:first-child{
     right: 19vw;
 }
 
-section:nth-child(2)>div>img:nth-child(2){
+section:nth-child(3)>div>img:nth-child(2){
     width: 26vw;
     position: absolute;
     top: 43vh;
@@ -345,187 +615,57 @@ section:nth-child(2)>div>img:nth-child(2){
     left: 16vw;
 }
 
-/*--------------------------------------expertise section-------------------------------------------------*/
-
-
-section:nth-child(3){
+.about-btn-box .btn{
+    text-decoration: none;
     position: relative;
-    height: 110vh;
-    width: 70vw;
-    padding-left: 14vw;
-    padding-right: 14vw;
-}
-
-section:nth-child(3)>h5{
-    width: 15vw;
-    font-family: 'Signika';
-    font-size: 2vw;
+    top: 61vh;
+    font-family: 'Poppins', roboto;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 11vw;
+    height: 14%;
+    background: #fac921;
+    border: 0.2rem solid #2d2d32;
+    border-radius: 0.8rem;
+    font-size: 1vw;
     font-weight: 600;
-    color: #FAC921;
+    letter-spacing: .1rem;
+    color: #ffffff;
+    z-index: 1;
+    overflow: hidden;
+    transition: .7s;
+}
+
+.about-btn-box .btn:hover {
+    color: #2d2d32;
+}
+
+
+.about-btn-box .btn:nth-child(2):hover {
+    color: #2d2d32;
+}
+
+.about-btn-box .btn:nth-child(2)::before {
+    background: #fac921;
+}
+
+.about-btn-box .btn::before {
+    content: '';
     position: absolute;
-    top: 5vw;
+    top: 0;
     left: 0;
-    right: 0;
-    margin: auto;
+    width: 0;
+    height: 100%;
+    background: #ffffff;
+    z-index: -1;
+    transition: .7s;
 }
 
-section:nth-child(3)>h1{
-    width: 42vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 6.5vw;
-    right: 0;
-    left: 0;
-    margin: auto;
+.about-btn-box .btn:hover::before {
+    width: 100%;
 }
 
-section:nth-child(3)>p{
-    width: 62vw;
-    font-family: 'Signika';
-    font-size: 1.3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    top: 10vw;
-    right: 0;
-    left: 0;
-    margin: auto;
-}
-
-section:nth-child(3)>div{
-    width: 23.5vw;
-    height: 35vh;
-    background-color: white;
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(3)>div:hover{
-    box-shadow: #FAC921 0px 4px 12px;
-}
-
-
-
-section:nth-child(3)>div>h4{
-    font-family: 'Catamaran';
-    font-size: 1.5vw;
-    font-weight: 700;
-    color: #0A0A0A;
-
-    position: absolute;
-    right: 0;
-    left: 7vw;
-    top: 15vh;
-    margin: auto;
-}
-
-section:nth-child(3)>div>h3{
-    width: 20vw;
-    font-family: Inter, SansSerif;
-    font-size: 1.2vw;
-    font-weight: 600;
-    text-align: center;
-    color: #808080;
-
-    position: absolute;
-    top: 21vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-#box1{
-    top: 35vh;
-    left: 12vw;
-}
-
-#box1>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box2{
-    top: 35vh;
-    right: 0;
-    left: 0;
-}
-
-#box2>img{
-    width: 24%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 2.8vh;
-    margin: auto;
-}
-
-#box3{
-    top: 35vh;
-    right: 12vw;
-}
-
-#box3>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box4{
-    top: 74vh;
-    left: 12vw;
-}
-
-#box4>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box5{
-    top: 74vh;
-    right: 0;
-    left: 0;
-}
-
-#box5>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box6{
-    top: 74vh;
-    right: 12vw;
-}
-
-#box6>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
 
 /*--------------------------------------skills section-------------------------------------------------*/
 
