--- a/page/assets/css/style.css
+++ b/page/assets/css/style.css
@@ -276,3 +276,15 @@ section:nth-child(16){
     margin-bottom: 7vh;
 }
 
+section:nth-child(17){
+    width: 39%;
+    height: 80vh;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 2px 5px 2px #B8B8B8;
+    margin-left: 53vw;
+    margin-top: -87vh;
+    margin-bottom: 9vh;
+}
+
